# fclient

./: .gitignore  .gitmodules  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/ru/iu3/fclient/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/ru/iu3/fclient/: MainActivity.kt  PinpadActivity.kt
app/src/main/java/ru/iu3/fclient/domain/: TransactionEvent.kt
app/src/main/java/ru/iu3/fclient/presentation/: MainActivity.kt  PinpadActivity.kt
app/src/main/res/layout/: activity_main.xml  activity_pinpad.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/ru/iu3/fclient/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
